--- a/index.html
+++ b/index.html
@@ -5,184 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>VocabQuiz</title>
   <meta name="description" content="Accessible vocabulary quiz that loads vocab.json or a user-selected JSON file." />
-  <style>
-    :root {
-      --bg: #0f172a;          /* slate-900 */
-      --panel: #111827;       /* gray-900 */
-      --panel-2: #1f2937;     /* gray-800 */
-      --text: #e5e7eb;        /* gray-200 */
-      --muted: #94a3b8;       /* slate-400 */
-      --accent: #22c55e;      /* green-500 */
-      --accent-2: #3b82f6;    /* blue-500 */
-      --danger: #ef4444;      /* red-500 */
-      --warning: #f59e0b;     /* amber-500 */
-      --focus: #f59e0b;
-      --radius: 16px;
-      --shadow: 0 10px 30px rgba(0,0,0,.35);
-      --gap: clamp(12px, 2vw, 18px);
-      --btn-size: clamp(48px, 6vw, 56px);
-      --font: system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
-    }
-    *, *::before, *::after { box-sizing: border-box; }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: var(--font);
-      background: radial-gradient(1200px 1200px at 80% -10%, #1e293b 0%, var(--bg) 50%) no-repeat fixed;
-      color: var(--text);
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-
-    /* Layout */
-    .app {
-      max-width: 980px;
-      margin: 0 auto;
-      padding: clamp(16px, 3vw, 28px);
-      display: grid;
-      grid-template-rows: auto 1fr auto;
-      min-height: 100dvh;
-      gap: var(--gap);
-    }
-    header, footer {
-      display: flex; align-items: center; justify-content: space-between;
-      gap: var(--gap);
-    }
-    header .title {
-      display: flex; align-items: center; gap: 12px;
-      font-weight: 700; letter-spacing: .3px;
-    }
-    header .title .badge {
-      font-size: .75rem; color: var(--muted); font-weight: 500;
-    }
-
-    .panel {
-      background: linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.0));
-      border: 1px solid rgba(255,255,255,.08);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: clamp(16px, 3vw, 24px);
-    }
-
-    .controls { display:flex; flex-wrap: wrap; gap: 10px; align-items: center; }
-
-    .file-input { position: relative; }
-    .file-input input[type=file] { position: absolute; inset: 0; opacity: 0; cursor: pointer; }
-    .btn { cursor: pointer; user-select: none; border: 1px solid rgba(255,255,255,.1);
-      background: var(--panel-2); color: var(--text); padding: 10px 14px; border-radius: 12px;
-      font-weight: 600; letter-spacing: .2px; transition: transform .08s ease, background .2s ease, border-color .2s ease;
-    }
-    .btn:hover { background: #283548; }
-    .btn:active { transform: translateY(1px); }
-    .btn[disabled] { opacity: .6; cursor: not-allowed; }
-    .btn-accent { background: #123; border-color: rgba(59,130,246,.4); }
-    .btn-accent:hover { background: #152a43; }
-
-    .status { color: var(--muted); font-size: .9rem; }
-
-    /* Progress */
-    .progress-wrap { display:grid; gap: 10px; }
-    .progress {
-      position: relative; height: 10px; background: #0b1220; border-radius: 20px; overflow: hidden;
-      border: 1px solid rgba(255,255,255,.08);
-    }
-    .progress .bar {
-      position: absolute; inset: 0 auto 0 0; width: 0%; background: linear-gradient(90deg, var(--accent-2), var(--accent));
-      border-radius: inherit; transition: width .35s ease;
-    }
-    .progress-text { font-size: .95rem; color: var(--muted); }
-
-    /* Quiz */
-    .quiz {
-      display: grid; gap: 18px;
-    }
-    .word {
-      font-size: clamp(1.5rem, 4.8vw, 2rem);
-      line-height: 1.2; font-weight: 800;
-    }
-    .options {
-      display: grid; gap: 12px;
-      grid-template-columns: 1fr;
-    }
-    @media (min-width: 640px) {
-      .options { grid-template-columns: 1fr 1fr; }
-    }
-    .option {
-      display: grid; grid-template-columns: var(--btn-size) 1fr; gap: 12px; align-items: center;
-      border: 1px solid rgba(255,255,255,.08); background: #0b1220; border-radius: 14px; padding: 8px;
-      overflow: hidden; position: relative; transition: transform .06s ease, border-color .2s ease, background .2s ease;
-    }
-    .option button {
-      height: var(--btn-size); width: var(--btn-size); border-radius: 12px; border: 1px solid rgba(255,255,255,.08);
-      background: var(--panel-2); color: var(--text); font-weight: 800; font-size: 1.1rem; cursor: pointer;
-      transition: transform .08s ease, background .2s ease, border-color .2s ease;
-    }
-    .option button:hover { background: #2a3a52; }
-    .option button:active { transform: translateY(1px); }
-    .option .label { padding: 8px 6px; font-size: 1rem; line-height: 1.3; }
-
-    .option.correct { outline: 2px solid var(--accent); border-color: rgba(34,197,94,.5); background: rgba(34,197,94,.08); }
-    .option.incorrect { outline: 2px solid var(--danger); border-color: rgba(239,68,68,.5); background: rgba(239,68,68,.06); }
-    .option[aria-disabled="true"] { opacity: .8; filter: grayscale(.08); }
-    .option[aria-disabled="true"] button { cursor: default; }
-
-    /* Results */
-    .results { text-align: center; display:grid; gap: 16px; }
-    .score {
-      font-size: clamp(2rem, 6vw, 3rem); font-weight: 900; letter-spacing: .5px;
-      background: linear-gradient(90deg, #60a5fa, #34d399); -webkit-background-clip: text; background-clip: text; color: transparent;
-    }
-
-    /* A11y helpers */
-    .visually-hidden { position: absolute !important; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px); white-space: nowrap; }
-
-    /* Respect reduced motion */
-    @media (prefers-reduced-motion: reduce) {
-      .progress .bar, .option, .btn { transition: none; }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!--
-    JSON format expected (either of the two):
-    1) Array of pairs
-    [
-      { "word": "abate", "meaning": "to lessen" },
-      { "word": "benevolent", "meaning": "kind; charitable" }
-    ]
-
-    2) Object map (will be converted automatically)
-    { "abate": "to lessen", "benevolent": "kind; charitable" }
-
-    Sample vocab.json (you can copy this into a 'vocab.json' file next to index.html):
-    [
-      {"word":"abate","meaning":"to lessen; diminish"},
-      {"word":"benevolent","meaning":"kind; charitable"},
-      {"word":"candid","meaning":"truthful and straightforward"},
-      {"word":"daunt","meaning":"to intimidate or discourage"},
-      {"word":"elated","meaning":"extremely happy"},
-      {"word":"frugal","meaning":"economical; avoiding waste"},
-      {"word":"gregarious","meaning":"sociable; fond of company"},
-      {"word":"hamper","meaning":"to hinder; obstruct"},
-      {"word":"impartial","meaning":"fair; unbiased"},
-      {"word":"jubilant","meaning":"feeling great joy"},
-      {"word":"kinetic","meaning":"related to motion"},
-      {"word":"lucid","meaning":"clear; easy to understand"},
-      {"word":"meticulous","meaning":"very careful and precise"},
-      {"word":"nonchalant","meaning":"calm and relaxed"},
-      {"word":"ornate","meaning":"highly decorated"},
-      {"word":"pragmatic","meaning":"practical; results‑oriented"},
-      {"word":"quell","meaning":"to put an end to; subdue"},
-      {"word":"resilient","meaning":"able to recover quickly"},
-      {"word":"succinct","meaning":"brief and clearly expressed"},
-      {"word":"tenacious","meaning":"persistent; determined"}
-    ]
-  -->
-
   <div class="app" id="app">
     <header class="panel" aria-label="Quiz controls and status">
       <div class="title" aria-live="polite" aria-atomic="true">
-        <span style="display:inline-grid;place-items:center;height:36px;width:36px;border-radius:10px;background:#0b1220;border:1px solid rgba(255,255,255,.1);font-weight:900;">VQ</span>
+        <span class="logo">VQ</span>
         <span>VocabQuiz</span>
         <span class="badge" id="dataset-badge">Default dataset</span>
       </div>
@@ -212,308 +41,18 @@
         <h2 class="word">Results</h2>
         <div class="score" id="score-text">0 / 0</div>
         <p id="results-note" class="status"></p>
-        <div style="display:flex;gap:12px;justify-content:center;flex-wrap:wrap;">
+        <div class="results-actions">
           <button class="btn btn-accent" id="restart-btn" type="button" aria-label="Restart quiz (shortcut R)">Restart (R)</button>
         </div>
       </section>
     </main>
 
     <footer class="panel" aria-label="Footer info">
-      <span class="status">Made for keyboard & screen readers • Mobile friendly</span>
-      <span class="status">Data stays in your browser</span>
+      <span class="status">Học tiếng Anh</span>
+      <span class="status">50 cành 1 tháng</span>
     </footer>
   </div>
 
-  <script>
-    // =================== Utility helpers ===================
-    const sleep = (ms) => new Promise(r => setTimeout(r, ms));
-    const clamp = (n, min, max) => Math.max(min, Math.min(max, n));
-    const shuffle = (arr) => {
-      const a = [...arr];
-      for (let i = a.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [a[i], a[j]] = [a[j], a[i]];
-      }
-      return a;
-    };
-    const sampleN = (arr, n, excludeIndex = -1) => {
-      const pool = arr.map((v, i) => ({ v, i })).filter(obj => obj.i !== excludeIndex);
-      return shuffle(pool).slice(0, n).map(obj => obj.v);
-    };
-
-    // =================== Default embedded dataset (fallback) ===================
-    const EMBEDDED_DEFAULT = [
-      {word: "abate", meaning: "to lessen; diminish"},
-      {word: "benevolent", meaning: "kind; charitable"},
-      {word: "candid", meaning: "truthful and straightforward"},
-      {word: "daunt", meaning: "to intimidate or discourage"},
-      {word: "elated", meaning: "extremely happy"},
-      {word: "frugal", meaning: "economical; avoiding waste"},
-      {word: "gregarious", meaning: "sociable; fond of company"},
-      {word: "hamper", meaning: "to hinder; obstruct"},
-      {word: "impartial", meaning: "fair; unbiased"},
-      {word: "jubilant", meaning: "feeling great joy"},
-      {word: "kinetic", meaning: "related to motion"},
-      {word: "lucid", meaning: "clear; easy to understand"},
-      {word: "meticulous", meaning: "very careful and precise"},
-      {word: "nonchalant", meaning: "calm and relaxed"},
-      {word: "ornate", meaning: "highly decorated"},
-      {word: "pragmatic", meaning: "practical; results‑oriented"},
-      {word: "quell", meaning: "to put an end to; subdue"},
-      {word: "resilient", meaning: "able to recover quickly"},
-      {word: "succinct", meaning: "brief and clearly expressed"},
-      {word: "tenacious", meaning: "persistent; determined"}
-    ];
-
-    // =================== Validation & normalization ===================
-    function normalizeRaw(raw) {
-      // Accept either Array<{word, meaning}> or { [word]: meaning }
-      if (Array.isArray(raw)) return raw;
-      if (raw && typeof raw === 'object') {
-        return Object.entries(raw).map(([word, meaning]) => ({ word, meaning }));
-      }
-      return [];
-    }
-    function validatePairs(rawPairs) {
-      const seen = new Set();
-      const valid = [];
-      for (const item of rawPairs) {
-        if (!item) continue;
-        const word = String(item.word ?? "").trim();
-        const meaning = String(item.meaning ?? "").trim();
-        if (!word || !meaning) continue; // ignore invalid entries
-        const key = word.toLowerCase() + "\u0000" + meaning.toLowerCase();
-        if (seen.has(key)) continue; // drop exact duplicates
-        seen.add(key);
-        valid.push({ word, meaning });
-      }
-      return valid;
-    }
-
-    // =================== DOM refs ===================
-    const wordEl = document.getElementById('word');
-    const optionsEl = document.getElementById('options');
-    const progressBar = document.getElementById('progress-bar');
-    const progressText = document.getElementById('progress-text');
-    const liveStatus = document.getElementById('live-status');
-    const resultsSection = document.getElementById('results');
-    const quizSection = document.getElementById('quiz');
-    const scoreText = document.getElementById('score-text');
-    const resultsNote = document.getElementById('results-note');
-    const restartBtn = document.getElementById('restart-btn');
-    const datasetBadge = document.getElementById('dataset-badge');
-    const fileInput = document.getElementById('file-input');
-    const resetDefaultBtn = document.getElementById('reset-default');
-
-    // =================== Quiz state ===================
-    const ADVANCE_DELAY = 800; // ms
-    let DATASET = [];
-    let SOURCE = 'Default dataset';
-    let order = []; // randomized indices for questions
-    let qIndex = 0;
-    let score = 0;
-
-    function updateDatasetBadge() {
-      datasetBadge.textContent = SOURCE;
-    }
-
-    function setProgress(current, total) {
-      const pct = total ? (current / total) * 100 : 0;
-      progressBar.style.width = clamp(pct, 0, 100) + '%';
-      progressBar.setAttribute('aria-valuenow', String(Math.round(pct)));
-      progressBar.setAttribute('role', 'progressbar');
-      progressBar.setAttribute('aria-valuemin', '0');
-      progressBar.setAttribute('aria-valuemax', '100');
-      progressText.textContent = `Question ${current} of ${total}`;
-    }
-
-    function announce(msg) {
-      liveStatus.textContent = msg;
-    }
-
-    function pickOptionsFor(index) {
-      const correct = DATASET[index];
-      const incorrect = sampleN(DATASET, 3, index).map(x => x.meaning);
-      const options = shuffle([ {text: correct.meaning, correct: true}, ...incorrect.map(t => ({text: t, correct: false})) ]);
-      return { word: correct.word, options };
-    }
-
-    function renderQuestion() {
-      const total = order.length;
-      const currentNo = Math.min(qIndex + 1, total);
-      setProgress(currentNo - 1, total);
-
-      const idx = order[qIndex];
-      const { word, options } = pickOptionsFor(idx);
-
-      wordEl.textContent = word;
-      optionsEl.innerHTML = '';
-
-      options.forEach((opt, i) => {
-        const wrapper = document.createElement('div');
-        wrapper.className = 'option';
-        wrapper.setAttribute('role', 'group');
-        wrapper.setAttribute('aria-disabled', 'false');
-
-        const btn = document.createElement('button');
-        btn.type = 'button';
-        btn.textContent = String(i + 1);
-        btn.setAttribute('aria-label', `Option ${i + 1}`);
-        btn.addEventListener('click', () => handleAnswer(wrapper, opt.correct));
-
-        const label = document.createElement('div');
-        label.className = 'label';
-        label.textContent = opt.text;
-        label.id = `opt-${i}`;
-
-        wrapper.appendChild(btn);
-        wrapper.appendChild(label);
-        optionsEl.appendChild(wrapper);
-      });
-
-      // Focus first option for accessibility
-      const firstBtn = optionsEl.querySelector('button');
-      if (firstBtn) firstBtn.focus();
-    }
-
-    async function handleAnswer(wrapper, isCorrect) {
-      disableAllOptions();
-      if (isCorrect) {
-        wrapper.classList.add('correct');
-        score++;
-        announce('Correct.');
-      } else {
-        wrapper.classList.add('incorrect');
-        announce('Incorrect.');
-      }
-      await sleep(ADVANCE_DELAY);
-      qIndex++;
-      if (qIndex >= order.length) {
-        showResults();
-      } else {
-        renderQuestion();
-      }
-    }
-
-    function disableAllOptions() {
-      optionsEl.querySelectorAll('.option').forEach(el => {
-        el.setAttribute('aria-disabled', 'true');
-        const btn = el.querySelector('button');
-        if (btn) btn.disabled = true;
-      });
-    }
-
-    function showResults() {
-      setProgress(order.length, order.length);
-      quizSection.hidden = true;
-      resultsSection.hidden = false;
-      scoreText.textContent = `${score} / ${order.length}`;
-      resultsNote.textContent = SOURCE;
-      restartBtn.focus();
-    }
-
-    function startQuiz() {
-      score = 0; qIndex = 0;
-      order = shuffle([...Array(DATASET.length).keys()]);
-      resultsSection.hidden = true;
-      quizSection.hidden = false;
-      announce('Quiz started.');
-      renderQuestion();
-    }
-
-    // =================== Loading datasets ===================
-    async function loadDefault() {
-      try {
-        const res = await fetch('vocab.json', { cache: 'no-store' });
-        if (!res.ok) throw new Error('No vocab.json found');
-        const json = await res.json();
-        const normalized = normalizeRaw(json);
-        const valid = validatePairs(normalized);
-        if (valid.length >= 4) {
-          DATASET = valid;
-          SOURCE = `Default: vocab.json (${valid.length} pairs)`;
-          updateDatasetBadge();
-          return;
-        }
-        throw new Error('Not enough valid pairs in vocab.json');
-      } catch (e) {
-        // Fallback to embedded
-        const valid = validatePairs(EMBEDDED_DEFAULT);
-        DATASET = valid;
-        SOURCE = `Embedded default (${valid.length} pairs)`;
-        updateDatasetBadge();
-      }
-    }
-
-    async function loadFromFile(file) {
-      return new Promise((resolve) => {
-        const reader = new FileReader();
-        reader.onerror = () => resolve({ ok: false, reason: 'Failed to read file' });
-        reader.onload = () => {
-          try {
-            const json = JSON.parse(String(reader.result));
-            const normalized = normalizeRaw(json);
-            const valid = validatePairs(normalized);
-            if (valid.length >= 4) {
-              DATASET = valid;
-              SOURCE = `Custom file: ${file.name} (${valid.length} pairs)`;
-              updateDatasetBadge();
-              resolve({ ok: true });
-            } else {
-              resolve({ ok: false, reason: 'At least 4 valid pairs required' });
-            }
-          } catch (err) {
-            resolve({ ok: false, reason: 'Invalid JSON format' });
-          }
-        };
-        reader.readAsText(file);
-      });
-    }
-
-    // =================== Events ===================
-    document.addEventListener('keydown', (e) => {
-      // Number keys 1-4 select options
-      if (!resultsSection.hidden && (e.key === 'r' || e.key === 'R')) {
-        startQuiz();
-        return;
-      }
-      if (resultsSection.hidden) {
-        const num = parseInt(e.key, 10);
-        if (num >= 1 && num <= 4) {
-          const btn = optionsEl.querySelectorAll('button')[num - 1];
-          if (btn && !btn.disabled) btn.click();
-        }
-      }
-      if (e.key === 'r' || e.key === 'R') {
-        startQuiz();
-      }
-    });
-
-    fileInput.addEventListener('change', async (e) => {
-      const file = e.target.files && e.target.files[0];
-      if (!file) return;
-      const res = await loadFromFile(file);
-      if (!res.ok) {
-        announce(`Custom file invalid: ${res.reason}. Falling back to default.`);
-        await loadDefault();
-      }
-      startQuiz();
-      // clear input to allow re-selecting same file later
-      fileInput.value = '';
-    });
-
-    resetDefaultBtn.addEventListener('click', async () => {
-      await loadDefault();
-      startQuiz();
-    });
-
-    restartBtn.addEventListener('click', () => startQuiz());
-
-    // =================== Init ===================
-    (async function init() {
-      await loadDefault();
-      startQuiz();
-    })();
-  </script>
+  <script src="app.js"></script>
 </body>
 </html>
